--- a/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
+++ b/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
@@ -15,14 +15,26 @@
         </p>
         <div class="forms-container">
           <div class="search-boxes">
-            <form>
+            <form
+              [formGroup]="readNftForm"
+              #readForm="ngForm"
+              (ngSubmit)="readNft(readForm.value)"
+            >
               <div class="row">
                 <div class="col-7 col-sm-8">
                   <input
                     class="transparent-inputs"
                     type="text"
                     placeholder="Enter token Id"
+                    formControlName="tokenId"
+                    (ngModelChange)='onChangeTokenId($event)'
+                    [ngClass]="{
+                      'is-invalid': isSubmitted && f.tokenId.errors
+                    }"
                   />
+                  <div *ngIf="isSubmitted && f.tokenId.errors" class="invalid-feedback">
+                    <div *ngIf="f.tokenId.errors.required">Token ID is required!</div>
+                  </div>
                 </div>
                 <div class="col-5 col-sm-4">
                   <button class="search-button" type="submit">Search</button>
@@ -36,15 +48,14 @@
     <div class="row mt-5">
       <div class="col-md-12 col-lg-5">
         <div class="details-container">
-          <h5 class="edit-medium-headings">Token ID: 79770</h5>
+          <h5 class="edit-medium-headings">Token ID: {{ tokenId }}</h5>
 
           <p class="p-para">Title</p>
           <p class="p-para-normal">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum
-            netus fames viverra facil
+            {{ title }}
           </p>
           <div class="pt-2 pb-3">
-            <img class="img-fluid" src="assets/images/ListedNFT.png" alt="" />
+            <img class="img-fluid" [src]="image" alt="" />
           </div>
           <h5 class="edit-medium-headings">Details</h5>
           <div class="row">
@@ -57,11 +68,11 @@
           </div>
           <p class="p-para">Mint - to - Address</p>
           <p class="p-para-normal">
-            0xb1efd79be9ac1fe6deaeeef3c56d04bccdc68130
+            {{ mintToAddress }}
           </p>
           <p class="p-para">Meta Data</p>
           <p class="p-para-normal">
-            ipfs://bafkreiaq25jbftokfte6rg7wfox237zwukbwg5njjr2mgitowzi42d5yby
+            {{ nftURI}}
           </p>
         </div>
       </div>
@@ -86,7 +97,7 @@
                 </table>
               </div>
               <div class="box-body">
-                <textarea class="transparent-inputs"></textarea>
+                <textarea class="transparent-inputs">{{ curl }}</textarea>
               </div>
             </div>
           </div>
@@ -107,7 +118,7 @@
               </div>
               <div class="box-body">
                 <textarea class="transparent-inputs">
-"response": "OK","chain": "polygon","contract_address": "0x47C7FF137D7a6644a9A96F1D44f5a6f857D9023f","transaction_hash": "0xa6869c0c2bd62f549558b68b045b834b087dec5e4644aed3841a0aa31a205e0a", "transaction_external_url": "https://polygonscan.com/tx/0xa6869c0c2bd62f549558b68b045b834b087dec5e4644aed3841a0aa31a205e0a","mint_to_address": "0xEaC2DAeB9AC99EFbb45c0Cb87f1d350eb2C552f9","name": "refer","description": "art","error": null
+                  {{ response }}
                               </textarea
                 >
               </div>
