--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
   [isMenuActive]="isMenuActive"
 ></app-side-nav>
 <nav class="navbar navbar-expand fixed-top our-navbar">
-  <div class="container-fluid">
+  <div class="container-fluid contained-nav">
     <!-- Navbar brand -->
     <a class="navbar-brand me-2" routerLink="/"> SHYFT </a>
 
@@ -24,8 +24,8 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
       <div class="d-flex align-items-center">
-        <a type="button" class="btn btn-link px-3 me-2"> Why Us </a>
-        <a type="button" class="btn btn-link px-3 me-2"> Partner With Us </a>
+        <!-- <a type="button" class="btn btn-link px-3 me-2"> Why Us </a>
+        <a type="button" class="btn btn-link px-3 me-2"> Partner With Us </a> -->
         <button
           id="side-panel"
           [ngStyle]="{
