--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,33 +13,37 @@ html {
   background-size: auto 85%, 100% auto;
 }
 
-.icon-points
-{
-	padding-bottom: 40px;
+.icon-points {
+  padding-bottom: 40px;
 }
-.icon-points .p-para-normal
-{
-    color: #112F4A;
-    font: 500 1rem/1.8125rem "Poppins", sans-serif;
-    /* letter-spacing: 0.1em; */
-	letter-spacing: 1px;
-    margin-top: 1rem;
-	
+.icon-points .p-para-normal {
+  color: #112f4a;
+  font: 500 1rem/1.8125rem "Poppins", sans-serif;
+  /* letter-spacing: 0.1em; */
+  letter-spacing: 1px;
+  margin-top: 1rem;
 }
 
 .hero-heading {
-  font: 700 6rem/6.25rem "Montserrat", sans-serif;
+  font: 700 6.25rem/9.25rem "Montserrat", sans-serif;
   text-transform: uppercase;
   letter-spacing: 6px;
   color: #112f4a;
 }
 .hero-sub-heading {
-  font: 700 3.75rem/4.5rem "Montserrat", sans-serif;
+  font: 700 3.75rem/5.5rem "Montserrat", sans-serif;
   letter-spacing: 4px;
   color: #112f4a;
 }
 .hero-padded-section {
   padding-right: 100px;
+}
+.p-para-hero {
+  color: #112f4a;
+  font: 600 1rem/1.8125rem "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 1rem;
+  padding-bottom: 3rem;
 }
 @media (max-width: 1200px) {
   .hero-section {
@@ -52,6 +56,32 @@ html {
     background-position: left top, right bottom;
     background-size: auto 50%, 100% auto;
     border-bottom: none;
+  }
+  .hero-section .p-para-hero {
+    color: #112f4a;
+    font: 600 14px/20px "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+  }
+  .hero-button-container .btn-solid-reg {
+    display: inline-block;
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
+    /* border: 0.3rem solid white; */
+    border: none;
+    border-radius: 2.5rem;
+    background-color: rgba(89, 101, 243, 0.29);
+    background: linear-gradient(
+      90.8deg,
+      rgba(224, 73, 155, 1) 3.34%,
+      rgba(89, 101, 243, 1) 100%
+    );
+    color: #fff;
+    font: 600 0.8rem/1.2rem "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    text-decoration: none;
+    transition: all 0.2s;
   }
   .hero-heading {
     font: 700 52px/70px "Montserrat", sans-serif;
@@ -97,10 +127,9 @@ html {
   .engage-section .btn-solid-reg:hover {
     transform: scale(1.1);
   }
-  .icon-points .p-para-normal
-	{
-		font: 500 0.8rem/1.15rem "Poppins", sans-serif;
-	}
+  .icon-points .p-para-normal {
+    font: 500 0.8rem/1.15rem "Poppins", sans-serif;
+  }
 }
 
 .hero-button-container-2 {
@@ -179,8 +208,8 @@ html {
 .style-circle {
   background-color: #4e58cd;
   background: linear-gradient(201.93deg, #4e58cd 13.09%, #97d2ff 88.9%);
-  height: 650px;
-  width: 650px;
+  height: 800px;
+  width: 800px;
   position: absolute;
   border-radius: 50%;
 }
@@ -210,7 +239,7 @@ html {
 
 .btn-solid-reg {
   display: inline-block;
-  padding: 1.1875rem 2.125rem 1.1875rem 2.125rem;
+  padding: 1rem 2.125rem 1rem 2.125rem;
   /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
   border: none;
   border-radius: 2.5rem;
@@ -407,7 +436,7 @@ html {
 }
 
 .section-sub-heading {
-  font: 700 3.5rem/4.25rem "Montserrat", sans-serif;
+  font: 700 3.75rem/5.625rem "Montserrat", sans-serif;
   letter-spacing: 4px;
   color: #112f4a;
 }
@@ -444,15 +473,15 @@ html {
 }
 .donut-background {
   background-color: #d6edff;
-  background: url(../images/donut-shape.svg), url(../images/Capsules.svg),
-    #d6edff;
+  background: url(../images/donut-shape.svg),
+    url(../images/capsule-shape-top.png), #d6edff;
   background-repeat: no-repeat, no-repeat;
-  background-position: 0rem 20rem, right bottom;
-  background-size: 35% auto, auto auto;
+  background-position: 0rem 4rem, right bottom;
+  background-size: 32% auto, auto 20%;
 }
 
 .why-us .why-us-text-container {
-  padding: 180px 0px;
+  padding: 80px 0 30px 0;
 }
 
 .p-para {
@@ -1127,7 +1156,7 @@ html {
 
 .outer-content-area {
   width: 100%;
-  padding-left: 250px;
+  padding-left: 350px;
   background: url(../images/outer-container-background.png);
   background-repeat: no-repeat;
   background-position: right top;
@@ -1220,7 +1249,9 @@ html {
   border-radius: 15px;
   background-color: #fff;
   padding: 3px;
+  padding-bottom: 10px;
   border: 2px solid #112f4a;
+  margin: 0 auto;
 }
 .request-boxes .heading-box {
   width: 100%;
@@ -1252,12 +1283,15 @@ html {
   color: white;
   transition: all 0.2s;
 }
+.request-boxes textarea {
+  resize: none;
+}
 .request-boxes .transparent-inputs {
   border: none;
   outline: none;
   width: 100%;
-  height: 305px;
-  font: 600 0.9rem/1.75rem "Poppins", sans-serif;
+  height: 300px;
+  font: 500 0.9rem/1.75rem "Poppins", sans-serif;
 }
 .request-boxes .box-body {
   height: 300px;
@@ -1282,6 +1316,7 @@ html {
   padding-bottom: 5px;
   border-radius: 40px;
   padding-left: 1.625rem;
+  padding-right: 5px;
   font: 400 0.875rem/1.875rem "Poppins", sans-serif;
   /* text-align: center; */
   letter-spacing: 0.1em;
@@ -1293,17 +1328,15 @@ html {
   border: none;
   outline: none;
   width: 100%;
-  height: 100%;
+  height: 3rem;
   padding: 0.25rem 1rem 0.25rem 0.1rem;
-  font: 500 0.9rem/1.75rem "Poppins", sans-serif;
+  font: 400 0.9rem/1.75rem "Poppins", sans-serif;
 }
 .search-boxes .search-button {
   display: inline-block;
-  /* padding: 0.25rem 1.0rem 0.25rem 1.125rem; */
-  padding: 10px 56px;
-  /* height: 100%;
-		width: 100%; */
-  /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
+  padding: 10px auto;
+  width: 100%;
+  height: 3rem;
   border: none;
   border-radius: 2.5rem;
   background-color: rgba(89, 101, 243, 0.29);
@@ -1464,4 +1497,456 @@ button:disabled {
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+/* Screens for Portfolio Styles */
+.border-gradient {
+  border-width: 5px 5px 5px 5px;
+  border-image: linear-gradient(
+    45deg,
+    rgba(100, 57, 242, 1) 0%,
+    rgba(242, 55, 55, 1) 100%
+  );
+  border-image-slice: 9;
+  border-style: solid;
+}
+
+.portfolio-section-3 {
+  padding-top: 12rem;
+  padding-bottom: 11rem;
+  background-color: #fff;
+  /* background: url(../images/Top-ellipse.png),#FFF; */
+  background: url(../images/Portfolio-Ellipse-red.png),
+    url(../images/Portfolio-des-blue.png), #fff;
+  /* background-size: 100% auto; */
+  background-repeat: no-repeat, no-repeat;
+  background-position: right top, left center;
+  background-size: auto 40%, 30% auto;
+}
+
+.portfolio-heading-3 {
+  font: 700 60px/88px "Montserrat", sans-serif;
+  letter-spacing: 6px;
+  color: #112f4a;
+}
+.portfolio-sub-heading-3 {
+  font: 700 3.75rem/5.5rem "Montserrat", sans-serif;
+  letter-spacing: 4px;
+  color: #112f4a;
+}
+.portfolio-para-md {
+  display: none;
+  color: #112f4a;
+  font: 600 16px/29px "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 1rem;
+  padding-bottom: 3rem;
+}
+.portfolio-para-sm {
+  display: block;
+  color: #112f4a;
+  font: 600 16px/29px "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 1rem;
+  padding-bottom: 3rem;
+}
+.portfolio-form-styles {
+  display: block; /* needed for proper display of the label in Firefox, IE, Edge */
+  width: 100%;
+  border-radius: 40px;
+  padding-left: 1.625rem;
+  font: 400 0.875rem/1.875rem "Poppins", sans-serif;
+  /* text-align: center; */
+  letter-spacing: 0.1em;
+  border: 3px solid rgba(89, 101, 243, 0.5);
+  -webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
+  transition: all 0.3s ease-in-out;
+  text-align: center;
+}
+.portfolio-form-styles:focus {
+  outline: none !important;
+  border: 3px solid rgba(89, 101, 243, 1);
+  box-shadow: 0 0 5px #5965f3;
+}
+.portfolio-form-styles-left {
+  display: inline-block; /* needed for proper display of the label in Firefox, IE, Edge */
+  width: 100%;
+  border-radius: 40px;
+  padding-left: 1.625rem;
+  font: 400 0.875rem/1.875rem "Poppins", sans-serif;
+  /* text-align: center; */
+  letter-spacing: 0.1em;
+  border: 3px solid rgba(89, 101, 243, 0.5);
+  -webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
+  transition: all 0.3s ease-in-out;
+}
+.small-form-container {
+  max-width: 400px;
+  width: 100%;
+  float: right;
+  margin-right: 30px;
+}
+.portfolio-form-styles-left:focus {
+  outline: none !important;
+  border: 3px solid rgba(89, 101, 243, 1);
+  box-shadow: 0 0 5px #5965f3;
+}
+.portfolio-form-styles-small {
+  display: inline; /* needed for proper display of the label in Firefox, IE, Edge */
+  /* width: 100%; */
+  border-radius: 40px;
+  padding-left: 1.625rem;
+  font: 400 0.875rem/1.875rem "Poppins", sans-serif;
+  /* text-align: center; */
+  letter-spacing: 0.1em;
+  border: 3px solid transparent;
+  -webkit-appearance: none; /* removes inner shadow on form inputs on ios safari */
+  transition: all 0.3s ease-in-out;
+}
+.portfolio-form-styles-small:focus {
+  outline: none !important;
+  border: 3px solid transparent;
+  box-shadow: 0 0 5px transparent;
+}
+.p-para-form-heads {
+  color: #112f4a;
+  font: 700 1rem/1.8125rem "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 2rem;
+}
+.port-img {
+  width: 95%;
+  margin: 0 auto;
+  margin-top: -70px;
+}
+.port-text-container {
+  padding-right: 30px;
+}
+.error-block {
+  color: red;
+  font: 600 0.9rem/1rem "Poppins", sans-serif;
+  /* letter-spacing: 0.1em; */
+}
+.port-faded-reg {
+  display: inline-block;
+  padding: 15px 40px;
+  /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
+  border: none;
+  border-radius: 2.5rem;
+  background-color: rgba(89, 101, 243, 0.29);
+  background: linear-gradient(
+    90.8deg,
+    rgba(224, 73, 155, 0.29) 3.34%,
+    rgba(89, 101, 243, 0.29) 100%
+  );
+  color: #112f4a;
+  font: 600 1rem/1.5rem "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  text-decoration: none;
+  transition: all 0.2s;
+}
+.port-faded-reg:hover {
+  transform: scale(1.1);
+}
+.port-faded-active {
+  background: linear-gradient(
+    to left,
+    rgba(89, 101, 243, 1),
+    rgba(224, 73, 155, 1)
+  );
+
+  /* border: 0.3rem solid rgba(89, 101, 243, 1); */
+  color: #fff;
+}
+.submit-button-cont {
+  margin-top: 50px;
+}
+.cards-outer-2 {
+  width: 100%;
+  /* height: 400px; */
+  padding: 30px;
+  /* padding-bottom: 0px; */
+  /* padding-top: 20px; */
+  border-radius: 20px;
+}
+.cards-outer-2 .inner-box {
+  width: 100%;
+  padding: 10px;
+  padding-bottom: 1px;
+  background-color: #d6edff;
+  border-radius: 20px;
+}
+.cards-outer-2 .inner-box img {
+  width: 100%;
+}
+.gall-para-2 {
+  color: #112f4a;
+  font: 600 1rem/1rem "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 0.8rem;
+}
+
+@media (max-width: 1200px) {
+  .portfolio-section-3 {
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+    background-color: #fff;
+    /* background: url(../images/Top-ellipse.png),#FFF; */
+    background: url(../images/Portfolio-Ellipse-red.png),
+      url(../images/Portfolio-tab-blue.png), #fff;
+    /* background-size: 100% auto; */
+    background-repeat: no-repeat, no-repeat;
+    background-position: right top, left center;
+    background-size: auto 20%, 20% auto;
+  }
+  .portfolio-heading-3 {
+    font: 700 50px/70px "Montserrat", sans-serif;
+    letter-spacing: 4px;
+  }
+  /* .portfolio-para-md {
+    display: none;
+    color: #112f4a;
+    font: 600 12px/21px "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 1rem;
+    padding-bottom: 3rem;
+  } */
+  .portfolio-para-sm {
+    display: block;
+    /* color: #112f4a; */
+    font: 600 12px/21px "Poppins", sans-serif;
+    /* letter-spacing: 0.1em;
+    margin-top: 1rem;
+    padding-bottom: 3rem; */
+  }
+  .port-img {
+    width: 95%;
+    margin: 0 auto;
+    margin-top: -20px;
+  }
+
+  .port-text-container {
+    padding-right: 30px;
+  }
+  .p-para-form-heads {
+    color: #112f4a;
+    font: 700 0.9rem/1.8125rem "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 1rem;
+  }
+  .port-faded-reg {
+    padding: 13px 35px;
+    /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
+    font: 600 0.9rem/1.2rem "Poppins", sans-serif;
+  }
+  .port-faded-active {
+    background: linear-gradient(
+      to left,
+      rgba(89, 101, 243, 1),
+      rgba(224, 73, 155, 1)
+    );
+
+    /* border: 0.3rem solid rgba(89, 101, 243, 1); */
+    color: #fff;
+  }
+  .cards-outer-2 {
+    width: 250px;
+    /* height: 400px; */
+    padding: 20px;
+    /* padding-bottom: 0px; */
+    /* padding-top: 20px; */
+    border-radius: 20px;
+  }
+  .cards-outer-2 .inner-box {
+    width: 100%;
+    padding: 10px;
+    padding-bottom: 1px;
+    background-color: #d6edff;
+    border-radius: 20px;
+  }
+  .cards-outer-2 .inner-box img {
+    width: 100%;
+  }
+  .gall-para-2 {
+    color: #112f4a;
+    font: 600 1rem/1rem "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 0.8rem;
+  }
+}
+@media (max-width: 576px) {
+  .portfolio-para-sm {
+    display: none;
+  }
+
+  .portfolio-section-3 {
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+    background-color: #fff;
+    /* background: url(../images/Top-ellipse.png),#FFF; */
+    background: url(../images/portfolio-mob-red.png),
+      url(../images/Portfolio-mob-blue.png), #fff;
+    /* background-size: 100% auto; */
+    background-repeat: no-repeat, no-repeat;
+    background-position: right top, left bottom;
+    background-size: auto 20%, 40% auto;
+  }
+  .portfolio-heading-3 {
+    font: 700 30px/40px "Montserrat", sans-serif;
+    letter-spacing: 2px;
+  }
+  .portfolio-para-md {
+    display: block;
+    font: 600 12px/21px "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 1rem;
+    /* padding-bottom: 3rem; */
+  }
+
+  .port-img {
+    width: 95%;
+    margin: 0 auto;
+    margin-top: -20px;
+  }
+
+  .port-text-container {
+    padding-right: 30px;
+  }
+  .p-para-form-heads {
+    color: #112f4a;
+    font: 700 0.9rem/1.8125rem "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 1rem;
+  }
+  .port-faded-reg {
+    padding: 13px 35px;
+    /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
+    font: 600 0.9rem/1.2rem "Poppins", sans-serif;
+  }
+  .port-faded-active {
+    background: linear-gradient(
+      to left,
+      rgba(89, 101, 243, 1),
+      rgba(224, 73, 155, 1)
+    );
+
+    /* border: 0.3rem solid rgba(89, 101, 243, 1); */
+    color: #fff;
+  }
+  .port-text-container {
+    padding-right: 0px;
+  }
+
+  .port-img {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: -75px;
+  }
+  .submit-button-cont {
+    margin-top: 30px;
+  }
+  .small-form-container {
+    /* max-width: 400px; */
+    width: 80%;
+    float: right;
+  }
+  .small-form-container .fa-list {
+    display: inline;
+    font-size: 10px;
+  }
+  .cards-outer-2 {
+    width: 150px;
+    /* height: 400px; */
+    padding: 10px 5px;
+    /* padding-bottom: 0px; */
+    /* padding-top: 20px; */
+    border-radius: 15px;
+  }
+  .cards-outer-2 .inner-box {
+    width: 100%;
+    padding: 10px;
+    padding-bottom: 1px;
+    background-color: #d6edff;
+    border-radius: 15px;
+  }
+  .cards-outer-2 .inner-box img {
+    width: 100%;
+  }
+  .gall-para-2 {
+    color: #112f4a;
+    font: 600 0.7rem/0.7rem "Poppins", sans-serif;
+    letter-spacing: 0.1em;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .file-up-container {
+    width: 50%;
+    margin: 0 auto;
+  }
+  .dash-button-cont {
+    width: 60%;
+    margin: 0 auto;
+  }
+  .dash-medium-headings {
+    /* font: 700 6rem/6.25rem "Montserrat", sans-serif; */
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    font-size: 2.5rem;
+    line-height: 3rem;
+    /* text-transform: uppercase; */
+    letter-spacing: 6px;
+    color: #112f4a;
+  }
+  .edit-medium-headings {
+    /* font: 700 6rem/6.25rem "Montserrat", sans-serif; */
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 2.125rem;
+    /* text-transform: uppercase; */
+    letter-spacing: 3px;
+    color: #112f4a;
+  }
+  .details-container .p-para-normal {
+    color: #112f4a;
+    font: 500 13px/17px "Poppins", sans-serif;
+    /* letter-spacing: 0.1em; */
+    letter-spacing: 1px;
+    word-wrap: break-word;
+  }
+}
+
+/* Terms Screens */
+.terms-container {
+  padding-top: 10rem;
+  padding-bottom: 3rem;
+  /* background: url(../images/Terms-sp-red-top.png),
+    url(../images/Terms-sp-blue.png),url(../images/Terms-sp-red.png), #fff; */
+  /* background: url(../images/Terms-sp-red-top.png),
+    url(../images/Terms-sp-blue.png),url(../images/Terms-sp-red.png), #fff; */
+  /* background-size: 100% auto; */
+  /* background-repeat: no-repeat, no-repeat,no-repeat;
+    background-position: right top, left middle, right 60%;
+    background-size: auto 30%, 30% auto,30% auto; */
+  background: url(../images/Terms-sp-red-top.png), #fff;
+  background-repeat: no-repeat;
+  background-position: right top;
+  background-size: 30% auto;
+}
+.terms-main-title {
+  font: 700 60px/88px "Montserrat", sans-serif;
+  letter-spacing: 6px;
+  color: #112f4a;
+}
+.terms-sub-h {
+  color: #112f4a;
+  font: 600 1.2rem/1.8125rem "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 2rem;
+}
+.terms-para {
+  color: #112f4a;
+  font: 500 1rem/1.8125rem "Poppins", sans-serif;
+  letter-spacing: 0.1em;
+  margin-top: 1rem;
 }
