--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1244,14 +1244,13 @@ html {
   transition: all 0.2s;
 }
 .request-boxes {
-  width: 360px;
+  width: 100%;
   height: 376px;
   border-radius: 15px;
   background-color: #fff;
   padding: 3px;
   padding-bottom: 10px;
   border: 2px solid #112f4a;
-  margin: 0 auto;
 }
 .request-boxes .heading-box {
   width: 100%;
@@ -1268,18 +1267,15 @@ html {
   margin-top: 1rem;
 }
 .request-boxes .copy-btn {
-  display: inline-block;
-  padding: 0.8rem 1rem 0.8rem 1rem;
-  /* border: 0.3rem solid rgba(89, 101, 243, 0.5); */
+  display: block;
+  padding: 0.8rem 1.5rem 0.8rem 1.5rem;
   border: none;
   border-radius: 2.5rem;
   background-color: rgba(89, 101, 243, 0.29);
   background: linear-gradient(95.13deg, #e0499b 8.58%, #5965f3 93.37%);
   color: #112f4a;
   font: 500 0.8rem/1rem "Poppins", sans-serif;
-  /* letter-spacing: 0.1em; */
   text-decoration: none;
-  /* min-width: 230px; */
   color: white;
   transition: all 0.2s;
 }
