--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,43 +1,45 @@
 <div class="container-fluid">
-    <div class="container footer-2">
-      <div class="row" style="padding: 30px 0px">
-        <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-start">
-          <div class="footer-text-container">
-            <div class="pt-3">
-              <h3 class="footer-logo">SHYFT</h3>
-            </div>
-            <div>
-              <div
-                class="text-center text-sm-center text-md-start pt-3"
-                style="width: 100%"
-              >
-                <span>
-                  <span class="footer-icons"
-                    ><a href="#"
-                      ><img src="assets/images/Icons/small-gmail.svg" alt="Gmail" /></a
-                  ></span>
-                  <span class="footer-icons"
-                    ><a href="#"
-                      ><img
-                        src="assets/images/Icons/small-twitter.svg"
-                        alt="Twitter" /></a
-                  ></span>
-                  <span class="footer-icons"
-                    ><a href="#"
-                      ><img
-                        src="assets/images/Icons/small-discord.svg"
-                        alt="Discord" /></a
-                  ></span>
-                </span>
-              </div>
-            </div>
+  <div class="container footer-2">
+    <div class="row" style="padding: 30px 0px">
+      <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-start">
+        <div class="footer-text-container">
+          <div class="pt-3">
+            <h3 class="footer-logo"><img src="assets/images/shyft_logo_2.svg" style="width: 115px;" alt="Shyft"></h3>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-end">
-          <div class="footer-link-container pt-5">
-            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
+          <div>
+            <div
+              class="text-center text-sm-center text-md-start pt-3"
+              style="width: 100%"
+            >
+              <span>
+                <span class="footer-icons"
+                  ><a href="mailto:team@shyft.to" target="_blank"
+                    ><img
+                      src="assets/images/Icons/small-gmail.svg"
+                      alt="Shyft Email"/></a
+                ></span>
+                <span class="footer-icons"
+                  ><a href="https://twitter.com/shyft_api" target="_blank"
+                    ><img
+                      src="assets/images/Icons/small-twitter.svg"
+                      alt="Shyft Twitter"/></a
+                ></span>
+                <span class="footer-icons"
+                  ><a href="https://discord.gg/UypKpEH9" target="_blank"
+                    ><img
+                      src="assets/images/Icons/small-discord.svg"
+                      alt="Shyft Discord"/></a
+                ></span>
+              </span>
+            </div>
           </div>
         </div>
       </div>
+      <!-- <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-end">
+          <div class="footer-link-container pt-5">
+            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
+          </div>
+        </div> -->
     </div>
   </div>
+</div>
