--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
 <nav class="navbar navbar-expand fixed-top our-navbar">
   <div class="container-fluid contained-nav">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" routerLink="/"> SHYFT </a>
+    <a class="navbar-brand me-2" routerLink="/"><img src="assets/images/shyft_logo.svg" style="width: 40px;" alt="Shyft"></a>
 
     <button
       class="navbar-toggler"
