--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -201,8 +201,8 @@
         <div class="col-sm-12 col-md-6 col-lg-6">
           <div class="pt-3 text-center text-md-start">
             <span class="inline-image"
-              ><a href="#"
-                ><img src="assets/images/Icons/discord.svg" alt="" /><span
+              ><a href="https://discord.gg/UypKpEH9" target="_blank"
+                ><img src="assets/images/Icons/discord.svg" alt="Shyft Discord" /><span
                   >Discord</span
                 ></a
               ></span
@@ -213,17 +213,17 @@
             request features and get support on our channel.
           </p>
           <div class="text-center text-md-start">
-            <button class="btn-solid-reg">Join community</button>
+            <a href="https://discord.gg/UypKpEH9" target="_blank"><button class="btn-solid-reg">Join community</button></a>
           </div>
           <p class="p-para text-center text-md-start">
             Show some love on our social handles...Follow us
           </p>
           <div class="text-center text-md-start">
             <span class="icon"
-              ><a href="#"><img src="assets/images/Icons/twitter.svg" alt="" /></a
+              ><a href="https://twitter.com/shyft_api" target="_blank"><img src="assets/images/Icons/twitter.svg" alt="Shyft Twitter" /></a
             ></span>
             <span class="icon"
-              ><a href="#"><img src="assets/images/Icons/github.svg" alt="" /></a
+              ><a href="https://github.com/Shyft-to" target="_blank"><img src="assets/images/Icons/github.svg" alt="Shyft GitHub" /></a
             ></span>
           </div>
           <p class="p-para text-center text-md-start">
