--- a/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
+++ b/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
@@ -171,36 +171,35 @@
       <div class="col-md-12 col-lg-5">
         <p class="p-para-normal">
           <strong class="p-para">POST</strong>
-          https://api.nftport.xyz /v0/mints/easy/files
+          https://api.shyft.to/createNft
         </p>
 
         <p class="p-para-normal">
-          With Easy mint, you can turn anything into an NFT in less than 5
+          You can turn anything into an NFT in less than 2
           minutes using one simple API call. If you are new to minting, see Easy
           minting quickstart.
         </p>
 
         <p class="p-para-normal">
           After minting, the NFT will appear in the mint_to_address wallet. If
-          you minted to your own wallet, you can also see the minted NFT on
-          OpenSea in your profile after a few minutes.
+          you minted to your own wallet.
         </p>
         <p class="p-para-normal">
           You can mint up to 100 NFTs for free per chain. Maximum supported file
-          size is 20MB. For higher limits, see pricing.
+          size is 20MB.
         </p>
         <p class="p-para-normal">
           <strong>Useful for:</strong>
           For turning anything into an NFT effortlessly. For all the benefits,
           see Your New Minting Superpowers.
         </p>
-        <p class="p-para-normal">
+        <!-- <p class="p-para-normal">
           <strong>Related:</strong>
           If you wish to customize the minting process e.g. use your own
           contract, see Customizable minting. If you wish to list all your
           previously minted NFTs, see List all your minted NFTs.
-        </p>
-        <p class="p-para">Example Requests in cURL, Python & JS</p>
+        </p> -->
+        <!-- <p class="p-para">Example Requests in cURL, Python & JS</p> -->
       </div>
       <div class="col-md-12 col-lg-1"></div>
       <div class="col-md-12 col-lg-5">
@@ -216,9 +215,8 @@
           </div>
           <div class="box-body">
             <textarea class="transparent-inputs">
-"response": "OK","chain": "polygon","contract_address": "0x47C7FF137D7a6644a9A96F1D44f5a6f857D9023f","transaction_hash": "0xa6869c0c2bd62f549558b68b045b834b087dec5e4644aed3841a0aa31a205e0a", "transaction_external_url": "https://polygonscan.com/tx/0xa6869c0c2bd62f549558b68b045b834b087dec5e4644aed3841a0aa31a205e0a","mint_to_address": "0xEaC2DAeB9AC99EFbb45c0Cb87f1d350eb2C552f9","name": "refer","description": "art","error": null
-                      </textarea
-            >
+{"transaction_hash":"0x3c375a1bc02b39eeb306b0e5ddf3f30e3f1433f0609b145a9c0df8e97fe2b08c","mint_to_address":"0x48295f586c5A078876438C16200c1F2600010d32","contract_address":"0x48295f586c5A078876438C16200c1F2600010d32","tokenId":"46","name":"Screenshot 2022-04-11 at 11.17.35 AM.png","description":"des","status":"success"}
+            </textarea>
           </div>
         </div>
       </div>
